fix: comment + ENV

--- a/cloudera-cdh/Dockerfile
+++ b/cloudera-cdh/Dockerfile
@@ -1,12 +1,14 @@
-###################################################################################################################
+##################################################################################################
 # This dockerfile will make some basic CDH related installation.
 #
-# It's purpose is to be the base to make more specific CDH container, so don't use it directly but instead use
-# - loicmathieu/cloudera-cdh-namenode : will launch an HDFS namenode and an HDFS secondarynamenode
-# - loicmathieu/cloudera-cdh-yarnmaster : will launch a Yarn ResourceManager and a MapReduce HistoryServer
+# It's purpose is to be the base to make more specific CDH container, so don't use it directly 
+# but instead use one of the following :
+# - loicmathieu/cloudera-cdh-namenode : will launch an HDFS namenode and a secondarynamenode
+# - loicmathieu/cloudera-cdh-yarnmaster : will launch a Yarn ResourceManager 
+#	and a MapReduce HistoryServer
 # - loicmathieu/cloudera-cdh-datanode : will launch and HDFS datanode and a Yarn NodeManager
 # - loicmathieu/cloudera-cdh-edgenode : will launch a client container to HDFS/Yarn cluster
-###################################################################################################################
+##################################################################################################
 FROM loicmathieu/openjdk
 
 MAINTAINER Loic Mathieu <loicmathieu@free.fr>
@@ -24,7 +26,7 @@ RUN yum -y install hadoop supervisor &&  rm -rf /var/cache/yum/*
 COPY config/* /usr/lib/hadoop/etc/hadoop/
 
 #set HADOOP_* environement variables
-ENV HADOOP_HOME=/usr/lib/hadoop
+ENV HADOOP_HOME /usr/lib/hadoop
 ENV HADOOP_CONF_DIR /etc/hadoop/conf
 ENV HADOOP_COMMON_HOME /usr/lib/hadoop
 ENV HADOOP_HDFS_HOME /usr/lib/hadoop-hdfs
