feat: improve doc

--- a/cloudera-cdh-edgenode/Dockerfile
+++ b/cloudera-cdh-edgenode/Dockerfile
@@ -1,9 +1,9 @@
-#######################################################################################################################
-# This dockerfile is derived from loicmathieu/cloudera-cdh and will setup an edge node to works with the 
-# other cloudera containers.
+#########################################################################################
+# This dockerfile is derived from loicmathieu/cloudera-cdh and will setup an edge node to
+# works with the other cloudera containers.
 # It also contains some pif/hive script and CSV test files to start with
 #
-#######################################################################################################################
+#########################################################################################
 FROM loicmathieu/cloudera-cdh
 
 MAINTAINER Loic Mathieu <loicmathieu@free.fr>
