feat(namenode, datanode): add VOLUME for HDFS fsimage and data to persist data between restart of containers

--- a/cloudera-cdh-datanode/Dockerfile
+++ b/cloudera-cdh-datanode/Dockerfile
@@ -9,11 +9,17 @@ FROM loicmathieu/cloudera-cdh
 
 MAINTAINER Loic Mathieu <loicmathieu@free.fr>
 
+#init datanode directory
+RUN mkdir -p /hdfs/data
+
 #setup supervisor
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 #expose port
 EXPOSE 50020 50075 8042
+
+#define HDFS volume to enable to persist datanode data (hdfs files) between restart
+VOLUME /hdfs
 
 #start the supervisor
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
