--- a/cloudera-cdh-namenode/Dockerfile
+++ b/cloudera-cdh-namenode/Dockerfile
@@ -12,6 +12,9 @@ FROM loicmathieu/cloudera-cdh
 
 MAINTAINER Loic Mathieu <loicmathieu@free.fr>
 
+#init namenode directory
+RUN mkdir -p /hdfs/nm
+
 #install the namenode stuff
 RUN yum -y install hadoop-hdfs-namenode && rm -rf /var/cache/yum/*
 
@@ -23,6 +26,9 @@ COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 #expose namenode port
 EXPOSE 8020
+
+#define HDFS volume to enable to persist namenode fsimage between restart
+VOLUME /hdfs
 
 #start the supervisor
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
