--- a/cloudera-cdh/Dockerfile
+++ b/cloudera-cdh/Dockerfile
@@ -32,3 +32,5 @@ ENV HADOOP_COMMON_HOME /usr/lib/hadoop
 ENV HADOOP_HDFS_HOME /usr/lib/hadoop-hdfs
 ENV HADOOP_YARN_HOME /usr/lib/hadoop-yarn
 ENV HADOOP_MAPRED_HOME /usr/lib/hadoop-mapreduce
+
+CMD ["bash"]
